[package]
name = "pia"
version = "0.2.0"
authors = ["Will Toll <will@wtoll.com>"]
edition = "2018"
description = "A simple library that adds packed integer arrays for mass storage of oddly sized variables"
documentation = "https://docs.rs/pia"
readme = "README.md"
homepage = "https://crates.io/crates/pia"
repository = "https://github.com/Wtoll/PIA"
license = "MIT OR Apache-2.0"
keyword = ["packed"]

[dependencies]
log = "0.4.14"
serde = {version = "1.0.127", optional = true}